tests/ui/regions/regions-in-structs-anon.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/regions-in-structs-anon.rs:4:8
   |
LL |     x: &isize
   |        ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL ~ struct Foo<'a> {
LL ~     x: &'a isize
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
